# family-scheduler

./: .env.example  .gitignore  PLAN.md  README.md  alembic.ini  pyproject.toml  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 20260112_0737_b55476051083_initial_schema_with_all_models.py  20260113_simplify_to_google_calendar.py  20260114_add_user_tokens.py  20260114_add_webhooks.py
docs/architecture/: agents.md  data-model.md  infrastructure.md  overview.md
docs/decisions/: README.md  adr-001-agent-framework-selection.md  adr-002-hub-and-spoke-agent-architecture.md  adr-003-proposal-flow-for-event-creation.md  adr-004-hybrid-agent-output-format.md  adr-005-event-triggered-conflict-detection.md  adr-006-phased-infrastructure-deployment.md  adr-007-hybrid-recurrence-model.md  adr-008-resource-capacity-model.md  adr-009-hard-vs-soft-constraints.md  adr-010-python-environment-package-management.md  adr-011-llm-provider-selection.md  adr-012-langgraph-state-schema-design.md  adr-013-sqlalchemy-database-schema.md  adr-014-api-endpoint-design-fastapi-structure.md  adr-015-orchestrator-implementation-langgraph.md  adr-016-individual-agent-implementation.md
docs/examples/: state_usage.md
src/: app.py  config.py  database.py
src/agents/: __init__.py  llm.py  state.py  state_utils.py
src/agents/prompts/: __init__.py  nl_parser_prompts.py  resolution_prompts.py
src/api/: __init__.py  auth_routes.py  dependencies.py  main.py  middleware.py  models.py  response_builder.py  webhook_routes.py
src/auth/: __init__.py  google_oauth.py  token_storage.py
src/integrations/: __init__.py  base.py
src/integrations/google_calendar/: __init__.py  adapter.py  auth.py  client.py  exceptions.py  repository.py
src/models/: __init__.py  base.py  conflicts.py  constraints.py  events.py  family.py  resources.py  tokens.py  webhooks.py
src/orchestrator/: __init__.py  checkpointing.py  nodes.py  routing.py
src/services/: __init__.py  calendar_service.py  queries.py  recurrence.py  resources.py  webhook_service.py
tests/: conftest.py
tests/integration/: conftest.py  test_api_integration.py  test_multi_turn_conversations.py  test_orchestrator_workflows.py
tests/unit/: test_config.py  test_llm.py  test_state.py
tests/unit/test_agents/: test_prompts.py
tests/unit/test_api/: test_endpoints.py  test_models.py  (+1 more)
(+18 files in other folders)
